# minishellv2

./: CMakeLists.txt  minishell.c  minishell.conf.in
movies/: menu_back.mov  menu_down.mov  menu_show.mov
movies/bookmark/ces/1k/: down.mov  effect.mov  show.mov
movies/bookmark/ces/4k/: down.mov  effect.mov  show.mov
movies/bookmark/digitalsign/4k/: down.mov  effect.mov  show.mov
movies/bookmark/main/1k/: click-effect.mov  click.mov  down.mov  effect0.mov  effect1.mov  show.mov
movies/bookmark/main/4k/: click-effect.mov  click.mov  down.mov  effect0.mov  effefct1.mov  show.mov
movies/bookmark/multitouch/1k/: down.mov  effect.mov  show.mov
movies/bookmark/multitouch/4k/: down.mov  effect.mov  show.mov
movies/bookmark/nemoux/1k/: down.mov  effect.mov  show.mov
movies/bookmark/nemoux/4k/: down.mov  effect.mov  show.mov
movies/contents/car/1k/: down.mov  effect.mov  show.mov
movies/contents/car/4k/: down.mov  effect.mov  show.mov
movies/contents/carvr/1k/: down.mov  effect.mov  show.mov
movies/contents/carvr/4k/: down.mov  effect.mov  show.mov
movies/contents/collaboration/1k/: down.mov  effect.mov  show.mov
movies/contents/collaboration/4k/: down.mov  effect.mov  show.mov
movies/contents/digitalsign/1k/: down.mov  effect.mov  show.mov
movies/contents/digitalsign/4k/: show.mov
movies/contents/etc/1k/: down.mov  effect.mov  show.mov
movies/contents/etc/4k/: down.mov  effect.mov  show.mov
movies/contents/fine/1k/: down.mov  effect.mov  show.mov
movies/contents/fine/4k/: down.mov  effect.mov  show.mov
movies/contents/iot/1k/: down.mov  effect.mov  show.mov
movies/contents/iot/4k/: down.mov  effect.mov  show.mov
movies/contents/main/1k/: click-effect.mov  click.mov  down.mov  effect0.mov  effect1.mov  show.mov
movies/contents/main/4k/: click-effect.mov  click.mov  down.mov  effect0.mov  effect1.mov  show.mov
movies/contents/promotion/1k/: down.mov  effect.mov  show.mov
movies/contents/promotion/4k/: down.mov  effect.mov  show.mov
movies/contents/sales/1k/: down.mov  effect.mov  show.mov
movies/contents/sales/4k/: down.mov  effect.mov  show.mov
movies/contents/shell/1k/: down.mov  effect.mov  show.mov
movies/contents/shell/4k/: down.mov  effect.mov  show.mov
movies/contents/sk/1k/: down.mov  effect.mov  show.mov
movies/contents/sk/4k/: down.mov  effect.mov  show.mov
movies/contents/vr/1k/: down.mov  effect.mov  show.mov
movies/contents/vr/4k/: down.mov  effect.mov  show.mov
movies/effect/1k/: feedback0.mov  feedback1.mov  feedback2.mov  feedback3.mov  longpress.mov
movies/effect/4k/: feedback1.mov  feedback2.mov  feedback3.mov  feedback4.mov  longpress.mov
movies/entertainment/bird/1k/: down.mov  effect.mov  show.mov
movies/entertainment/bird/4k/: down.mov  effect.mov  show.mov
movies/entertainment/bmw/1k/: down.mov  effect.mov  show.mov
movies/entertainment/bmw/4k/: down.mov  effect.mov  show.mov
movies/entertainment/car_game/1k/: down.mov  effect.mov  show.mov
(+105 files in other folders)
